--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Marck+Script&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,500&family=Overpass:wght@200&family=Pacifico&family=Roboto:wght@300&family=Tinos:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
   <title>Workout Diary</title>
 </head>
 
